--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -23,7 +23,7 @@ main > .section-outer > .section.hero-container{
   margin-left: auto;
   margin-right: auto;
   color: var(--background-color);
-  font-size: var(--heading-font-size-l);
+  font-size: var(--heading-font-size-xxl);
 }
 
 .hero .hero-content h2 {
@@ -45,6 +45,12 @@ main > .section-outer > .section.hero-container{
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+@media screen and (width >= 992px) {
+  .hero h1 {
+    font-size: var(--heading-font-size-3xl);
+  }
 }
 
 @media (width >= 1200px) {
