--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -24,7 +24,7 @@
       border-top: 1px solid #ccc;
       background: #F2F2F2;
       &:last-child { border-bottom: 1px solid #ccc }
-      &:nth-child(even) { background: #E5E6E5; }
+      &:nth-child(even) { background: #E5E6E5 }
 
       td {
         padding: 1em;
