--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,60 +1,54 @@
 .table {
   width: 100%;
   overflow-x: auto;
-}
 
-.table table {
-  width: 100%;
-  max-width: 100%;
-  border-collapse: collapse;
-  font-size: var(--body-font-size-xs);
-}
+  table {
+    width: 100%;
+    min-width: 600px;
 
-@media (width >= 768px) {
-  .table table {
-    font-size: var(--body-font-size-s);
+    thead {
+      th {
+        padding: 1em;
+        text-align: left;
+        font-weight: bold;
+        background: var(--red);
+
+        p {
+          color: #fff;
+          margin: 0;
+        }
+      }
+    }
+
+    tbody tr {
+      border-top: 1px solid #ccc;
+      background: #F2F2F2;
+      &:last-child { border-bottom: 1px solid #ccc }
+      &:nth-child(even) { background: #E5E6E5 }
+
+      td {
+        padding: 1em;
+        text-align: left;
+
+        p {
+          margin: 0;
+          + p { margin-top: 0.25em }
+        }
+      }
+    }
   }
-}
 
-@media (width >= 1024px) {
-  .table table {
-    font-size: var(--body-font-size-s);
+  /* variant styles */
+  &.plain {
+    table {
+      border-collapse: collapse;
+
+      thead th {
+        background: transparent;
+        p { color: unset }
+      }
+
+      tbody tr { background: transparent }
+    }
   }
-}
-
-.table table thead tr {
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
-}
-
-.table table tbody tr {
-  border-bottom: 2px solid white;
-  background-color: #F2F2F2;
-}
-
-.table table th {
-  font-weight: bold;
-  background-color: var(--red);
-  color: white;
-  border: 2px solid white;
-}
-
-.table table th,
-.table table td {
-  padding: 0.5em;
-  text-align: left;
-  border: 2px solid white;
-}
-
-.table table th p,
-.table table td p {
-  margin: 0;
-}
-
-.table table td p + p {
-  margin-top: 0.25em;
-}
-
-.table tr:nth-child(even) {
-  background-color: #E5E6E5;
 }
