--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,6 +303,20 @@ a:hover {
   margin: 8px;
 }
 
+.button-container.has-subtext{
+  text-align: center;
+
+  .button-subtext {
+    display: block;
+    font-size: var(--body-font-size-xxs);
+    color: var(--waz-blue);
+  }
+
+  a{
+    margin: 0;
+  }
+}
+
 /* primary button colors */
 
 .button.primary {
