--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -147,3 +147,11 @@
       }
     }
 }
+
+@container (width <= 576px) {
+    .embed {
+      &.youtube, &.vimeo {
+        min-height: auto;
+      }
+    }
+}
