--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@
   --light-gray: #CBCBCB;
   --very-light-gray: #f8f8f8;
   --divider-gray: #eee;
-  --section-background-gray: #eee;
+  --gray-background: #eee;
   --black: #000;
   --light-red: #ed7790;
   --b-green: #419e66;
@@ -210,6 +210,10 @@ h2 {
 h3 {
   font-size: var(--body-font-size-m);
   color: var(--dark-purple);
+}
+
+.center {
+  text-align: center;
 }
 
 p,
@@ -575,7 +579,7 @@ body.purple {
 [data-theme="gray"] {
   & .section.inner{
     padding: 40px;
-    background-color: var(--section-background-gray);
+    background-color: var(--gray-background);
   }
 }
 
