--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -21,10 +21,6 @@
   flex-wrap: wrap;
 }
 
-.columns > div > .columns-img-col {
-  order: 0;
-}
-
 .columns > div > .columns-img-col img {
   display: block;
 }
@@ -62,6 +58,10 @@
 }
 
 @media (width>=992px) {
+  .columns > div > div {
+    flex: 1 1;
+  }
+  
   .columns.wrap > div > div {
     flex: 1 1;
   }
