--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -144,6 +144,7 @@
   .card a {
     display: inline-block;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     position: relative;
   }
@@ -234,7 +235,6 @@
 @container (width >=576px) {
   .cards .card {
     width: 47%;
-    padding: 10px;
   }
 }
 
