--- a/styles/styles.css
+++ b/styles/styles.css
@@ -583,12 +583,34 @@ body.purple {
   h1, h2, h3, h4, h5, h6, a:any-link {
     color: var(--white);
   }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--purple);
+    }
+  }
 }
 
 [data-theme="gray"]:not([data-background]) {
-  & .section.inner, & .section{
-    padding: 40px;
-    background-color: var(--gray-background);
+  background-color: var(--gray-background);
+  color: var(--white);
+
+  a {
+    text-decoration: underline;
+  }
+
+  h1, h2, h3, h4, h5, h6, a:any-link {
+    color: var(--white);
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--gray-background);
+    }
   }
 }
 
@@ -603,6 +625,14 @@ body.purple {
 
   h3 {
     color: var(--white);
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--orange-red);
+    }
   }
 }
 
@@ -653,6 +683,14 @@ body.laz-blue {
 
     h1, h2, h3, h4, h5, h6, a:any-link  {
       color: var(--white);
+    }
+
+    &:has(.inner) {
+      background-color: var(--white);
+  
+      .section.inner {
+        background-color: var(--laz-blue);
+      }
     }
   }
 
@@ -751,6 +789,12 @@ body.yellow {
     color: var(--text-color);
     text-decoration: underline;
   }
+
+  &:has(.inner) {
+    .section.inner {
+      background-color: var(--yellow);
+    }
+  }
 }
 
 body.berry {
@@ -760,7 +804,7 @@ body.berry {
 }
 
 [data-theme="berry"]:not([data-background]) {
-  background-color: var(--berry);
+    background-color: var(--berry);
     color: var(--white);
 
     a {
@@ -769,6 +813,14 @@ body.berry {
 
     h1, h2, h3, h4, h5, h6, a:any-link {
       color: var(--white);
+    }
+
+    &:has(.inner) {
+      background-color: var(--white);
+
+      .section.inner {
+        background-color: var(--berry);
+      }
     }
 }
 
