--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -126,7 +126,7 @@
   }
 
   .card {
-    background: var(--divider-gray);
+    background: var(--gray);
     height: auto;
     position: relative;
 
