--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,38 +13,35 @@
 :root {
   /* colors */
   --background-color: white;
-  --light-color: #f8f8f8;
+  --white: #FFF;
+  --off-white: #F6F6F6;
+  --very-light-gray: #f8f8f8;
+  --light-gray: #CBCBCB;
+  --gray: #eee;
   --dark-color: #505050;
   --medium-gray: #555;
   --medium-light-gray: #777;
-  --text-color: #131313;
+  --navy-blue: #0E4482;
+  --dark-blue: #005CB9;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
-  --berry: #C83192;
   --bright-blue: #00B3E2;
   --bright-green: #C1D52F;
-  --bright-yellow: #FDDC3F;
-  --dark-blue: #005CB9;
-  --gold: #F8BE15;
+  --b-green: #419e66;
   --green: #128641;
+  --bright-yellow: #FDDC3F;
+  --gold: #F8BE15;
+  --yellow: #F8BE15;
   --light-pink: #F1CBE4;
-  --navy-blue: #0E4482;
   --orange: #F48C21;
   --orange-red: #F05B32;
   --purple: #904799;
   --red: #E21D46;
   --sky-blue: #A2DAE8;
   --turquoise: #3FC1C0;
-  --yellow: #F8BE15;
-  --white: #FFF;
-  --off-white: #F6F6F6;
-  --light-gray: #CBCBCB;
-  --very-light-gray: #f8f8f8;
-  --divider-gray: #eee;
-  --gray-background: #eee;
-  --black: #000;
   --light-red: #ed7790;
-  --b-green: #419e66;
+  --text-color: #131313;
+  --black: #000;
   --laz-black: #35302C;
   --laz-blue: #00B3E2;
   --laz-logo-blue: #31409A; /* royal blue */
@@ -238,7 +235,7 @@ pre {
 pre {
   padding: 16px;
   border-radius: 8px;
-  background-color: var(--light-color);
+  background-color: var(--very-light-gray);
   overflow-x: auto;
   white-space: pre;
 }
@@ -310,7 +307,7 @@ a:hover {
   text-align: center;
 
   .button-subtext {
-    display: block; 
+    display: block;
     font-size: var(--body-font-size-xxs);
 
     &a{
@@ -326,7 +323,7 @@ a:hover {
 /* primary button colors */
 
 .button.primary {
-  &.bgcolor-red {
+  &.bgcolor-red, &.bgcolor-theme {
     background-color: var(--red);
     border-color: var(--red);
     color: var(--white);
@@ -338,13 +335,13 @@ a:hover {
   }
 
   &.bgcolor-berry {
-    background-color: var(--berry);
-    border-color: var(--berry);
+    background-color: var(--product-berry);
+    border-color: var(--product-berry);
     color: var(--white);
 
     &:hover {
-      color: var(--berry);
-      border-color: var(--berry);
+      color: var(--product-berry);
+      border-color: var(--product-berry);
     }
   }
 
@@ -365,6 +362,16 @@ a:hover {
     &:hover {
       color: var(--faz-light-blue);
       border-color: var(--faz-light-blue);
+    }
+  }
+
+  &.bgcolor-royal-blue {
+    background-color: var(--navy-blue);
+    border-color: var(--navy-blue);
+
+    &:hover {
+      color: var(--navy-blue);
+      border-color: var(--navy-blue);
     }
   }
 
@@ -410,7 +417,8 @@ a:hover {
   }
 
   /* secondary button colors */
-  .button.secondary.textcolor-red {
+  .button.secondary.textcolor-red,
+  .button.secondary.textcolor-theme {
     color: var(--red);
     border-color: var(--red);
   }
@@ -520,7 +528,7 @@ nav li {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: var(--divider-gray);
+  background-color: var(--gray);
 }
 
 /*********
@@ -560,18 +568,6 @@ body.purple {
   }
 }
 
-[data-background] {
-  color: var(--white);
-
-  a {
-    text-decoration: underline;
-  }
-
-  h1, h2, h3, h4, h5, h6, a:any-link {
-    color: var(--white);
-  }
-}
-
 [data-theme="purple"]:not([data-background]) {
   background-color: var(--purple);
   color: var(--white);
@@ -588,7 +584,7 @@ body.purple {
 [data-theme="gray"]:not([data-background]) {
   & .section.inner, & .section{
     padding: 40px;
-    background-color: var(--gray-background);
+    background-color: var(--gray);
   }
 }
 
@@ -647,7 +643,7 @@ body.laz-blue {
     font-size: var(--body-font-size-m);
     }
 
-  a {
+  a:not(.button)  {
     text-decoration: underline;
   }
 
@@ -711,7 +707,7 @@ body.yellow {
   .table table th {
     background-color: var(--yellow);
     }
-  
+
     .cards.circle-image .card picture {
       background-color: var(--yellow);
     }
@@ -754,16 +750,49 @@ body.yellow {
 }
 
 body.berry {
-  & h3, a {
-    color: var(--berry);
+  & h1, h3, a {
+    color: var(--product-berry);
+  }
+
+  .breadcrumbs-outer {
+    background-color: var(--product-berry);
+  }
+
+  .table table th {
+    background-color: var(--product-berry);
   }
 }
 
+[data-theme="pink"] {
+    background-color: var(--light-pink);
+    }
+
 [data-theme="berry"]:not([data-background]) {
-  background-color: var(--berry);
+  background-color: var(--product-berry);
     color: var(--white);
 
-    a {
+  .button.primary.bgcolor-theme {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--product-berry);
+
+    &:hover {
+      color: var(--white);
+      background-color: var(--product-berry);
+    }
+  }
+
+  .button.secondary.textcolor-theme {
+    color: var(--white);
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--product-berry);
+    }
+  }
+
+    a:not(.button) {
       text-decoration: underline;
     }
 
@@ -889,7 +918,7 @@ body.orange-red {
   /* section metadata */
   main .section.light,
   main .section.highlight {
-    background-color: var(--light-color);
+    background-color: var(--very-light-gray);
     margin: 0;
     padding: 40px 0;
   }
