--- a/templates/two-column/two-column.css
+++ b/templates/two-column/two-column.css
@@ -53,7 +53,7 @@
                 color: var(--product-red);
 
                 &:hover {
-                    background-color: var(--divider-gray);
+                    background-color: var(--gray);
                 }
 
                 &[aria-selected='true'] {
