--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -18,7 +18,8 @@
 }
 
 .accordion h4 {
-  font-size: var(--body-font-size-s);
+  font-family: var(--heading-font-family);
+  font-size: 20px;
   line-height: 1.4286;
   margin-bottom: .8em;
   margin-top: .8em;
