--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -45,6 +45,14 @@
   > div > div.col-has-content {
     background: var(--gray);
     border-radius: 20px;
+    padding: 15px;
+  }
+}
+
+.columns.white {
+  > div > div.col-has-content {
+    background: var(--white);
+    border-radius: 20px;
   }
 }
 
