--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -18,12 +18,17 @@ main > .section-outer > .section.hero-container{
   min-height: 300px;
 }
 
+.hero.hero-picture-only {
+  padding: 0;
+}
+
 .hero h1 {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   color: var(--background-color);
   font-size: var(--heading-font-size-xxl);
+  text-shadow: 1px 1px 6px var(--medium-gray);
 }
 
 .hero .hero-content h2 {
@@ -41,6 +46,11 @@ main > .section-outer > .section.hero-container{
   box-sizing: border-box;
 }
 
+.hero.hero-picture-only picture {
+  position: relative;
+  z-index: 0;
+}
+
 .hero img {
   object-fit: cover;
   width: 100%;
@@ -54,7 +64,7 @@ main > .section-outer > .section.hero-container{
 }
 
 @media (width >= 1200px) {
-  .hero {
+  .hero:not(.hero-picture-only) {
     padding: 40px 32px;
   }
 
